2001-08-31  Vladimir Makarov  <vmakarov@redhat.com>

	* haifa-sched.c (insn_cost, schedule_insn, queue_to_ready,
	schedule_block, sched_init, sched_finish): Add missed calls of
	use_dfa_pipeline_interface.

	* sched-rgn.c (init_ready_list, new_ready, debug_dependencies):
	Ditto.

	* sched-vis.c (get_visual_tbl_length): Ditto.
	
Thu Aug 30 19:22:15 2001  J"orn Rennecke <amylaar@redhat.com>

	* config.gcc (h8300-*-elf*): New case.
	* h8300.h (CPP_SPEC): Add subtarget_cpp_spec.
	(SUBTARGET_CPP_SPEC): Define.
	(EXTRA_SPECS): Define.
	(SUBTARGET_EXTRA_SPECS): Define.
	* config/h8300/crti.asm, config/h8300/crtn.asm: New files.
	* config/h8300/elf.h, config/h8300/t-elf: Likewise.

Thu Aug 30 18:50:37 2001  J"orn Rennecke <amylaar@redhat.com>

	* t-h8300 (LIB1ASMFUNCS): Add _fixunssfdi and _fixunssfsi_asm.
	(LIB2FUNCS_EXTRA): Define.
	config/h8300/lib1funcs.asm: New part: L_fixunssfsi_asm .
	config/h8300/fixunssfsi.c: New file.

2001-08-30  Kazu Hirata  <kazu@hxi.com>

	* config/h8300/h8300.md (zero_extendqihi2): Changes to
	define_expand to accomodate target-specific attributes.
	(anonymous zero_extendqihi2 patterns): New.

Thu Aug 30 18:10:56 2001  J"orn Rennecke <amylaar@redhat.com>

	* h8300.md (*andorhi3): New pattern.

Thu Aug 30 16:00:31 2001  J"orn Rennecke <amylaar@redhat.com>

	* h8300.c (dosize): Fix test for "sub".

Thu Aug 30 10:21:43 2001  J"orn Rennecke <amylaar@redhat.com>

	* c-typeck.c (pointer_diff): Try to eliminate common term before
	doing conversions.

2001-08-29  Geoffrey Keating  <geoffk@redhat.com>

	* reload1.c (move2add_note_store): Correct typo checking for
	argument pushes.

2001-08-29  Andrew MacLeod  <amacleod@redhat.com>

	* gcse.c (compute_hash_table): The SRC part of an insn with a RETVAL
	note should not be considered outside the libcall block.

2001-08-29  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* genattrtab.c (attr_printf): Use VA_OPEN/VA_FIXEDARG/VA_CLOSE.

2001-08-29  Kazu Hirata  <kazu@hxi.com>
