@@ -1,3 +1,10 @@
+2001-09-07  Vladimir Makarov  <vmakarov@redhat.com>
+
+	* genautomata.c (create_automata): Print message about creation of
+	each automaton.
+	(generate): Remove printing meease about creation of
+	automata.
+
 2001-08-31  Vladimir Makarov  <vmakarov@redhat.com>
 
 	* haifa-sched.c (insn_cost, schedule_insn, queue_to_ready,
